# python-open-sdk

./: README.md  logger.config  open-sdk.cfg  setup.cfg  setup.py
open_sdk/: client.py  config_loader.py  exceptions.py  shell.py  specs_resolver.py  utils.py
