[metadata]
name=python-open-sdk
description=Python SDK for accessing  APIs
# Please Note: This url will change when we move to github.com
url=https://github.com/PythonGirlxxx/python-open-sdk.git
long-description = file: README.md
classifier=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers, Testers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

# we want to support only 3 and above

[options]
python_requires = >= 3.0
packages = open_sdk

[bdist_wheel]
universal=1

[entry_points]
console_scripts =
    open_sdk = open_sdk.shell:main
